--- a/apps/amapp/templates/amapp/thanks.html
+++ b/apps/amapp/templates/amapp/thanks.html
@@ -12,9 +12,9 @@
 <body>
 	<div class="container-fluid bg-1 text-center">
 		<h1>Thank you for your business!</h1>
-		<h3>We charged your card for {{request.session.price}}</h3>
-		<h3>You have ordered {{request.session.item}} items so far and spent {{request.session.price}} with Amadon.com!</h3>
-		<a href="">Go Back</a>
+		<h3>We charged your card for {{request.session.total}}</h3>
+		<h3>You have ordered {{request.session.item}} items so far and spent {{request.session.sumtotal}} with Amadon.com!</h3>
+		<a href="/">Go Back</a>
 	</div>
 </body>
 </html>
